--- a/sling/nlp/document/BUILD
+++ b/sling/nlp/document/BUILD
@@ -150,6 +150,7 @@ cc_library(
     "//sling/myelin:compute",
     "//sling/myelin:flow",
     "//sling/myelin:gradient",
+    "//sling/myelin:rnn",
     "//sling/util:embeddings",
   ],
 )
