Fixes for building on OSX

--- a/sling/myelin/BUILD
+++ b/sling/myelin/BUILD
@@ -123,6 +123,7 @@ cc_library(
   name = "elf-linker",
   srcs = ["elf-linker.cc"],
   hdrs = ["elf-linker.h"],
+  tags = ["linux"],
   deps = [
     ":compute",
     "//sling/base",
@@ -133,6 +134,7 @@ cc_library(
 cc_binary(
   name = "analyze",
   srcs = ["analyze.cc"],
+  tags = ["linux"],
   deps = [
     ":compute",
     ":elf-linker",
