--- a/sling/task/BUILD
+++ b/sling/task/BUILD
@@ -63,6 +63,7 @@ cc_library(
   name = "dashboard",
   srcs = ["dashboard.cc"],
   hdrs = ["dashboard.h"],
+  tags = ["linux"],
   deps = [
     ":app",
     ":job",
