Python API for dates and calendar

--- a/sling/pyapi/BUILD
+++ b/sling/pyapi/BUILD
@@ -6,6 +6,7 @@ cc_library(
     "pyapi.cc",
     "pyarray.cc",
     "pybase.cc",
+    "pydate.cc",
     "pyframe.cc",
     "pymisc.cc",
     "pyparser.cc",
@@ -17,6 +18,7 @@ cc_library(
   hdrs = [
     "pyarray.h",
     "pybase.h",
+    "pydate.h",
     "pyframe.h",
     "pymisc.h",
     "pyparser.h",
@@ -36,6 +38,7 @@ cc_library(
     "//sling/nlp/wiki:phrase-table",
     "//sling/nlp/document:document-tokenizer",
     "//sling/nlp/document:phrase-tokenizer",
+    "//sling/nlp/kb:calendar",
     "//sling/nlp/parser",
     "//sling/task:dashboard",
     "//sling/task:job",
@@ -44,6 +47,8 @@ cc_library(
   ],
   copts = [
     "-Wno-pmf-conversions",
+    "-Wno-write-strings",
+    "-Wno-invalid-offsetof",
   ],
 )
 
