--- a/sling/nlp/document/BUILD
+++ b/sling/nlp/document/BUILD
@@ -84,6 +84,20 @@ cc_library(
 )
 
 cc_library(
+  name = "lex",
+  srcs = ["lex.cc"],
+  hdrs = ["lex.h"],
+  deps = [
+    ":document",
+    ":document-tokenizer",
+    "//sling/base",
+    "//sling/frame:object",
+    "//sling/frame:store",
+    "//sling/string:text",
+  ],
+)
+
+cc_library(
   name = "document-source",
   srcs = ["document-source.cc"],
   hdrs = ["document-source.h"],
