--- a/sling/util/BUILD
+++ b/sling/util/BUILD
@@ -28,6 +28,14 @@ cc_library(
 )
 
 cc_library(
+  name = "bloom",
+  hdrs = ["bloom.h"],
+  deps = [
+    "//sling/base",
+  ],
+)
+
+cc_library(
   name = "unicode",
   hdrs = [
     "unicode.h",
