Transitive closure for fact extraction

--- a/sling/nlp/kb/BUILD
+++ b/sling/nlp/kb/BUILD
@@ -23,6 +23,7 @@ cc_library(
     "//sling/frame:object",
     "//sling/frame:store",
     "//sling/frame:serialization",  # TODO: remove
+    "//sling/util:bloom",
   ],
 )
 
