--- a/sling/pyapi/BUILD
+++ b/sling/pyapi/BUILD
@@ -63,6 +63,7 @@ cc_library(
     "//sling/nlp/wiki:name-table-builder",
     "//sling/nlp/wiki:phrase-table-builder",
 
+    "//sling/nlp/embedding:fact-embeddings",
     "//sling/nlp/embedding:word-embeddings",
 
     "//sling/task:frame-store-reader",
