Write out lexicon sizes

--- a/sling/nlp/embedding/BUILD
+++ b/sling/nlp/embedding/BUILD
@@ -43,6 +43,7 @@ cc_library(
     ":embedding-model",
     "//sling/base",
     "//sling/base:perf",
+    "//sling/file",
     "//sling/file:textmap",
     "//sling/myelin:builder",
     "//sling/myelin:compute",
