Task process queues

--- a/sling/nlp/embedding/BUILD
+++ b/sling/nlp/embedding/BUILD
@@ -43,7 +43,6 @@ cc_library(
     ":embedding-model",
     "//sling/base",
     "//sling/base:perf",
-    "//sling/file",
     "//sling/file:textmap",
     "//sling/myelin:builder",
     "//sling/myelin:compute",
@@ -57,7 +56,7 @@ cc_library(
     "//sling/task:process",
     "//sling/util:embeddings",
     "//sling/util:bloom",
-    "//sling/util:random",
+    "//sling/util:mutex",
     "//sling/util:sortmap",
     "//sling/util:thread",
   ],
