--- a/sling/nlp/embedding/BUILD
+++ b/sling/nlp/embedding/BUILD
@@ -54,9 +54,10 @@ cc_library(
     "//sling/nlp/kb:facts",
     "//sling/task:frames",
     "//sling/task:process",
-    "//sling/util:embeddings",
     "//sling/util:bloom",
+    "//sling/util:embeddings",
     "//sling/util:mutex",
+    "//sling/util:random",
     "//sling/util:sortmap",
     "//sling/util:thread",
   ],
