Horizontal and vertical SIMD matmul

--- a/sling/myelin/tests/BUILD
+++ b/sling/myelin/tests/BUILD
@@ -10,6 +10,7 @@ cc_library(
     "//sling/base",
     "//sling/file",
     "//sling/myelin:compute",
+    "//sling/myelin:elf-linker",
     "//sling/myelin:flow",
   ],
 )
