Predicate support for expressions

--- a/sling/myelin/tests/BUILD
+++ b/sling/myelin/tests/BUILD
@@ -46,6 +46,7 @@ cc_binary(
     "//sling/file:posix",
     "//sling/myelin:compute",
     "//sling/myelin:flow",
+    "//sling/myelin:elf-linker",
     "//sling/myelin/kernel:tensorflow",
   ],
 )
