Myelin compiler wrapper

--- a/sling/myelin/tests/BUILD
+++ b/sling/myelin/tests/BUILD
@@ -44,10 +44,7 @@ cc_binary(
     "//sling/base",
     "//sling/file",
     "//sling/file:posix",
-    "//sling/myelin:compute",
-    "//sling/myelin:flow",
-    "//sling/myelin:elf-linker",
-    "//sling/myelin/kernel:tensorflow",
+    "//sling/myelin:compiler",
   ],
 )
 
@@ -108,14 +105,9 @@ cc_binary(
     "//sling/frame:serialization",
     "//sling/frame:store",
     "//sling/myelin:builder",
-    "//sling/myelin:compute",
-    "//sling/myelin:elf-linker",
+    "//sling/myelin:compiler",
     "//sling/myelin:gradient",
-    "//sling/myelin:flow",
-    "//sling/myelin:graph",
     "//sling/myelin:learning",
-    "//sling/myelin:profile",
-    "//sling/myelin/kernel:tensorflow",
     "//sling/nlp/document",
     "//sling/nlp/document:lexical-encoder",
     "//sling/util:mutex",
