Use dual encoder for fact embeddings

--- a/sling/nlp/embedding/BUILD
+++ b/sling/nlp/embedding/BUILD
@@ -22,9 +22,7 @@ cc_library(
     "//sling/file:recordio",
     "//sling/file:textmap",
     "//sling/myelin:builder",
-    "//sling/myelin:compute",
-    "//sling/myelin:flow",
-    "//sling/myelin/kernel:tensorflow",
+    "//sling/myelin:compiler",
     "//sling/nlp/document",
     "//sling/frame:serialization",
     "//sling/task:accumulator",
@@ -44,13 +42,10 @@ cc_library(
   deps = [
     ":embedding-model",
     "//sling/base",
-    "//sling/base:perf",
     "//sling/file:textmap",
     "//sling/myelin:builder",
-    "//sling/myelin:compute",
-    "//sling/myelin:flow",
-    "//sling/myelin:profile",
-    "//sling/myelin/kernel:tensorflow",
+    "//sling/myelin:compiler",
+    "//sling/myelin:learning",
     "//sling/frame:object",
     "//sling/frame:store",
     "//sling/frame:serialization",
@@ -77,8 +72,7 @@ cc_binary(
     "//sling/frame:store",
     "//sling/frame:serialization",
     "//sling/myelin:builder",
-    "//sling/myelin:compute",
-    "//sling/myelin/kernel:tensorflow",
+    "//sling/myelin:compiler",
     "//sling/util:embeddings",
     "//sling/util:top",
   ],
