Python API for Wikidata converter

--- a/sling/nlp/wiki/BUILD
+++ b/sling/nlp/wiki/BUILD
@@ -53,11 +53,11 @@ cc_library(
   name = "wikidata-importer",
   srcs = ["wikidata-importer.cc"],
   deps = [
-    ":wiki",
+  ":wiki",
+  ":wikidata-converter",
     "//sling/frame",
-    "//sling/nlp/kb:calendar",
     "//sling/stream:input",
-    "//sling/stream:output",
+    "//sling/stream:memory",
     "//sling/string:text",
     "//sling/string:numbers",
     "//sling/task",
