Document renderer prototype

--- a/sling/nlp/document/BUILD
+++ b/sling/nlp/document/BUILD
@@ -186,3 +186,16 @@ cc_binary(
     "//sling/http:web-service",
   ],
 )
+
+cc_binary(
+  name = "document-renderer",
+  srcs = ["document-renderer.cc"],
+  deps = [
+    "//sling/base",
+    "//sling/file",
+    "//sling/file:posix",
+    "//sling/file:recordio",
+    "//sling/frame",
+    "//sling/nlp/document",
+  ],
+)
