Span and token rendering

--- a/app/BUILD
+++ b/app/BUILD
@@ -11,8 +11,9 @@ embed_data(
     "external/material-icons.css",
     "external/material-icons.woff2",
     "external/preact.js",
+    "lib/docview.js",
     "lib/mdl.js",
     "lib/sling.js",
+    "style/docview.css",
   ],
 )
-
