Dynamic stylesheet loading

--- a/app/BUILD
+++ b/app/BUILD
@@ -5,15 +5,15 @@ load("//tools:embed.bzl", "embed_data")
 embed_data(
   name = "app",
   srcs = [
-    "image/appicon.ico",
     "external/material.js",
     "external/material.css",
     "external/material-icons.css",
     "external/material-icons.woff2",
     "external/preact.js",
+    "image/appicon.ico",
     "lib/docview.js",
     "lib/mdl.js",
-    "lib/sling.js",
+    "lib/util.js",
     "style/docview.css",
   ],
 )
