Wikipedia parsing using extractor and annotator

--- a/sling/nlp/wiki/BUILD
+++ b/sling/nlp/wiki/BUILD
@@ -112,6 +112,8 @@ cc_library(
   name = "wikipedia-documents",
   srcs = ["wikipedia-documents.cc"],
   deps = [
+    ":wiki-annotator",
+    ":wiki-extractor",
     ":wiki-parser",
     ":wikipedia-map",
     "//sling/base",
