--- a/sling/nlp/wiki/BUILD
+++ b/sling/nlp/wiki/BUILD
@@ -68,9 +68,17 @@ cc_library(
     "//sling/base:registry",
     "//sling/frame:object",
     "//sling/nlp/document",
-    "//sling/nlp/document:fingerprinter",
     "//sling/string:text",
   ],
+)
+
+cc_library(
+  name = "wiki-macros",
+  srcs = ["wiki-macros.cc"],
+  deps = [
+    ":wiki-annotator",
+  ],
+  alwayslink = 1,
 )
 
 cc_library(
@@ -116,6 +124,7 @@ cc_library(
   deps = [
     ":wiki-annotator",
     ":wiki-extractor",
+    ":wiki-macros",
     ":wiki-parser",
     ":wikipedia-map",
     "//sling/base",
@@ -209,11 +218,16 @@ cc_binary(
   name = "parse-wiki-text",
   srcs = ["parse-wiki-text.cc"],
   deps = [
-    ":wiki-parser",
+    ":wiki",
+    ":wiki-annotator",
     ":wiki-extractor",
+    ":wiki-macros",
+    ":wiki-parser",
+    ":wikipedia-map",
     "//sling/base",
     "//sling/file",
     "//sling/file:posix",
+    "//sling/frame",
     "//sling/string",
   ],
 )
