--- a/tools/BUILD
+++ b/tools/BUILD
@@ -61,3 +61,14 @@ cc_binary(
   ],
 )
 
+cc_binary(
+  name = "templgen",
+  srcs = ["templgen.cc"],
+  deps = [
+    "//sling/base",
+    "//sling/file",
+    "//sling/file:posix",
+    "//sling/nlp/wiki:wiki-parser",
+  ],
+)
+
