Span taxonomy and date annotations

--- a/sling/nlp/ner/BUILD
+++ b/sling/nlp/ner/BUILD
@@ -20,6 +20,7 @@ cc_library(
     ":chart",
     "//sling/frame:store",
     "//sling/nlp/document",
+    "//sling/nlp/kb:calendar",
     "//sling/nlp/kb:facts",
   ],
 )
