--- a/sling/pyapi/BUILD
+++ b/sling/pyapi/BUILD
@@ -69,7 +69,7 @@ cc_library(
 cc_library(
   name = "tasks",
   deps = [
-    "//sling/nlp/wiki:profile-aliases",
+    "//sling/nlp/wiki:aliases",
     "//sling/nlp/wiki:wikidata-importer",
     "//sling/nlp/wiki:wikipedia-importer",
     "//sling/nlp/wiki:wikipedia-documents",
