Add resolver to span annotator

--- a/sling/nlp/ner/BUILD
+++ b/sling/nlp/ner/BUILD
@@ -48,6 +48,7 @@ cc_library(
   deps = [
     ":chart",
     ":idf",
+    ":resolver",
     "//sling/frame:serialization",
     "//sling/frame:object",
     "//sling/frame:store",
