--- a/sling/pyapi/BUILD
+++ b/sling/pyapi/BUILD
@@ -83,6 +83,7 @@ cc_library(
     "//sling/nlp/embedding:word-embeddings",
 
     "//sling/nlp/ner:idf",
+    "//sling/nlp/ner:labeler",
 
     "//sling/task:frame-store-reader",
     "//sling/task:frame-store-writer",
