--- a/tools/BUILD
+++ b/tools/BUILD
@@ -31,6 +31,8 @@ cc_binary(
     "//sling/file:recordio",
     "//sling/file:posix",
     "//sling/frame",
+    "//sling/nlp/document",
+    "//sling/nlp/document:lex",
     "//sling/stream:memory",
     "//sling/string:printf",
     "//sling/util:fingerprint",
