Add links to flow artifacts for cells, step, and tensors

--- a/sling/nlp/embedding/BUILD
+++ b/sling/nlp/embedding/BUILD
@@ -73,6 +73,7 @@ cc_library(
     "//sling/file:textmap",
     "//sling/frame:object",
     "//sling/frame:store",
+    "//sling/frame:serialization",
     "//sling/myelin:builder",
     "//sling/myelin:compiler",
     "//sling/myelin:gradient",
