Python API for plausibility model

--- a/sling/nlp/embedding/BUILD
+++ b/sling/nlp/embedding/BUILD
@@ -97,6 +97,7 @@ cc_library(
     "//sling/myelin:compiler",
     "//sling/myelin:compute",
     "//sling/myelin:flow",
+    "//sling/nlp/kb:facts",
   ],
 )
 
