--- a/sling/pyapi/BUILD
+++ b/sling/pyapi/BUILD
@@ -79,6 +79,9 @@ cc_library(
     "//sling/nlp/wiki:wikipedia-documents",
     "//sling/nlp/wiki:wikipedia-links",
 
+    "//sling/nlp/document:vocabulary-builder",
+
+    "//sling/nlp/kb:fact-lexicon",
     "//sling/nlp/kb:name-table-builder",
     "//sling/nlp/kb:phrase-table-builder",
 
